compiler/tests/en/errors/dyn_not_interface.salam
// EXPECT: E001
struct Dog:
    pub func bark(): str: ret "woof" end
end

func main:
    d := Dog {} as dyn Dog
    println d.bark()
end
